5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4132/executions/1800_2573.log
== SUBMITION (2019-06-12 13:24:18) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
v3 = zeros(size(v),dtype=float)
imc=0

for i in range(size(v)):
	imc = v[i]/v2[i]**2
	v3[i]=imc
	imc=0
print(v3)
print("O MAIOR IMC DA TURMAEH: ",max(v3))
if (max(v3)<=17):
	print("muito abaixo do peso").upper()
elif (max(v3)<=18.49):
	print("abaixo do peso").upper()
elif(max(v3)<=24.99):
	print("peso normal").upper()
elif(max(v3)<=):
	print("acima do peso").upper()
elif(max(v3)<=17):
	print("obesidade").upper()
elif(max(v3)<=17):
	print("obesidade severa").upper()
elif(max(v3)<=17):
	print("obesidade morbida").upper()



-- EXECUTION TIME:
0.769961
-- ERROR:
  File "/home/codebench/codes/1800/2573/main.py", line 19
    elif(max(v3)<=):
                  ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:24:21) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
v3 = zeros(size(v),dtype=float)
imc=0

for i in range(size(v)):
	imc = v[i]/v2[i]**2
	v3[i]=imc
	imc=0
print(v3)
print("O MAIOR IMC DA TURMAEH: ",max(v3))
if (max(v3)<=17):
	print("muito abaixo do peso").upper()
elif (max(v3)<=18.49):
	print("abaixo do peso").upper()
elif(max(v3)<=24.99):
	print("peso normal").upper()
elif(max(v3)<=):
	print("acima do peso").upper()
elif(max(v3)<=17):
	print("obesidade").upper()
elif(max(v3)<=17):
	print("obesidade severa").upper()
elif(max(v3)<=17):
	print("obesidade morbida").upper()



-- ERROR:
File "XXXX", line 19
    elif(max(v3)<=):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:25:17) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
v3 = zeros(size(v),dtype=float)
imc=0

for i in range(size(v)):
	imc = v[i]/v2[i]**2
	v3[i]=imc
	imc=0
print(v3)
print("O MAIOR IMC DA TURMAEH: ",max(v3))
if (max(v3)<=17):
	print("muito abaixo do peso").upper()
elif (max(v3)<=18.49):
	print("abaixo do peso").upper()
elif(max(v3)<=24.99):
	print("peso normal").upper()
elif(max(v3)<=29.99):
	print("acima do peso").upper()
elif(max(v3)<=34.99):
	print("obesidade").upper()
elif(max(v3)<=39.99):
	print("obesidade severa").upper()
elif(max(v3)>40.00):
	print("obesidade morbida").upper()



-- EXECUTION TIME:
1.17239
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2573/main.py", line 18, in <module>
    print("peso normal").upper()
AttributeError: 'NoneType' object has no attribute 'upper'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:25:20) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
v3 = zeros(size(v),dtype=float)
imc=0

for i in range(size(v)):
	imc = v[i]/v2[i]**2
	v3[i]=imc
	imc=0
print(v3)
print("O MAIOR IMC DA TURMAEH: ",max(v3))
if (max(v3)<=17):
	print("muito abaixo do peso").upper()
elif (max(v3)<=18.49):
	print("abaixo do peso").upper()
elif(max(v3)<=24.99):
	print("peso normal").upper()
elif(max(v3)<=29.99):
	print("acima do peso").upper()
elif(max(v3)<=34.99):
	print("obesidade").upper()
elif(max(v3)<=39.99):
	print("obesidade severa").upper()
elif(max(v3)>40.00):
	print("obesidade morbida").upper()



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:25:34) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
v3 = zeros(size(v),dtype=float)
imc=0

for i in range(size(v)):
	imc = v[i]/v2[i]**2
	v3[i]=imc
	imc=0
print(v3)
print("O MAIOR IMC DA TURMAEH: ",max(v3))
if (max(v3)<=17):
	print("muito abaixo do peso").upper()
elif (max(v3)<=18.49):
	print("abaixo do peso").upper()
elif(max(v3)<=24.99):
	print("peso normal").upper()
elif(max(v3)<=29.99):
	print("acima do peso").upper()
elif(max(v3)<=34.99):
	print("obesidade").upper()
elif(max(v3)<=39.99):
	print("obesidade severa").upper()
elif(max(v3)>40.00):
	print("obesidade morbida").upper()



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:26:11) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
v3 = zeros(size(v),dtype=float)
imc=0

for i in range(size(v)):
	imc = v[i]/v2[i]**2
	v3[i]=imc
	imc=0
print(v3)
print("O MAIOR IMC DA TURMAEH: ",max(v3))
if (max(v3)<=17):
	print("muito abaixo do peso").upper()
elif (max(v3)<=18.49):
	print("abaixo do peso").upper()
elif(max(v3)<=24.99):
	print("peso normal").upper()
elif(max(v3)<=29.99):
	print("acima do peso").upper()
elif(max(v3)<=34.99):
	print("obesidade").upper()
elif(max(v3)<=39.99):
	print("obesidade severa").upper()
elif(max(v3)>40.00):
	print("obesidade morbida").upper()



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:26:29) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
v3 = zeros(size(v),dtype=float)
imc=0

for i in range(size(v)):
	imc = v[i]/v2[i]**2
	v3[i]=imc
	imc=0
print(v3)
print("O MAIOR IMC DA TURMAEH: ",max(v3))
if (max(v3)<=17):
	print("muito abaixo do peso").upper()
elif (max(v3)<=18.49):
	print("abaixo do peso").upper()
elif(max(v3)<=24.99):
	print("peso normal").upper()
elif(max(v3)<=29.99):
	print("acima do peso").upper()
elif(max(v3)<=34.99):
	print("obesidade").upper()
elif(max(v3)<=39.99):
	print("obesidade severa").upper()
elif(max(v3)>40.00):
	print("obesidade morbida").upper()



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:28:19) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
v3 = zeros(size(v),dtype=float)
imc=0

for i in range(size(v)):
	imc = v[i]/v2[i]**2
	v3[i]=imc
	imc=0
print(v3)
print("O MAIOR IMC DA TURMAEH: ",max(v3))
if (max(v3)<=17):
	print("MUITO ABAIXO DO PESO")
elif (max(v3)<=18.49):
	print("ABAIXO DO PESO").upper()
elif(max(v3)<=24.99):
	print("PESO NORMAL").upper()
elif(max(v3)<=29.99):
	print("ACIMA DO PESO").upper()
elif(max(v3)<=34.99):
	print("OBESIDADE").upper()
elif(max(v3)<=39.99):
	print("OBESIDADE SEVERA").upper()
elif(max(v3)>40.00):
	print("OBESIDADE MORBIDA").upper()



-- EXECUTION TIME:
1.56488
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2573/main.py", line 18, in <module>
    print("PESO NORMAL").upper()
AttributeError: 'NoneType' object has no attribute 'upper'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:28:21) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
v3 = zeros(size(v),dtype=float)
imc=0

for i in range(size(v)):
	imc = v[i]/v2[i]**2
	v3[i]=imc
	imc=0
print(v3)
print("O MAIOR IMC DA TURMAEH: ",max(v3))
if (max(v3)<=17):
	print("MUITO ABAIXO DO PESO")
elif (max(v3)<=18.49):
	print("ABAIXO DO PESO").upper()
elif(max(v3)<=24.99):
	print("PESO NORMAL").upper()
elif(max(v3)<=29.99):
	print("ACIMA DO PESO").upper()
elif(max(v3)<=34.99):
	print("OBESIDADE").upper()
elif(max(v3)<=39.99):
	print("OBESIDADE SEVERA").upper()
elif(max(v3)>40.00):
	print("OBESIDADE MORBIDA").upper()



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:28:38) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
v3 = zeros(size(v),dtype=float)
imc=0

for i in range(size(v)):
	imc = v[i]/v2[i]**2
	v3[i]=imc
	imc=0
print(v3)
print("O MAIOR IMC DA TURMAEH: ",max(v3))
if (max(v3)<=17):
	print("MUITO ABAIXO DO PESO")
elif (max(v3)<=18.49):
	print("ABAIXO DO PESO")
elif(max(v3)<=24.99):
	print("PESO NORMAL")
elif(max(v3)<=29.99):
	print("ACIMA DO PESO")
elif(max(v3)<=34.99):
	print("OBESIDADE")
elif(max(v3)<=39.99):
	print("OBESIDADE SEVERA")
elif(max(v3)>40.00):
	print("OBESIDADE MORBIDA")



-- EXECUTION TIME:
0.93108
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.60752934 22.99444707 19.13007284 20.15894905]
O MAIOR IMC DA TURMAEH:  24.607529340039623
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84348536 12.95269353 17.4432758 ]
O MAIOR IMC DA TURMAEH:  17.443275802877565
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79247016 31.87781289]
O MAIOR IMC DA TURMAEH:  37.792470156106525
OBESIDADE SEVERA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:32:06) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
v3 = zeros(size(v),dtype=float)
imc=0

for i in range(size(v)):
	imc = v[i]/v2[i]**2
	v3[i]=imc
	imc=0
print(v3)
print("O MAIOR IMC DA TURMAEH: ",max(v3))
if (max(v3)<=17):
	print("MUITO ABAIXO DO PESO")
elif (max(v3)>17 and max(v3)<=18.49):
	print("ABAIXO DO PESO")
elif(max(v3)>18.5 and (max(v3)<=24.99):
	print("PESO NORMAL")
elif(max(v3)>25 and max(v3)<=29.99):
	print("ACIMA DO PESO")
elif(max(v3)>30 and max(v3)<=34.99):
	print("OBESIDADE")
elif(max(v3)>35 and max(v3)<=39.99):
	print("OBESIDADE SEVERA")
elif( max(v3)>40.00):
	print("OBESIDADE MORBIDA")



-- EXECUTION TIME:
0.800634
-- ERROR:
  File "/home/codebench/codes/1800/2573/main.py", line 17
    elif(max(v3)>18.5 and (max(v3)<=24.99):
                                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:32:13) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
v3 = zeros(size(v),dtype=float)
imc=0

for i in range(size(v)):
	imc = v[i]/v2[i]**2
	v3[i]=imc
	imc=0
print(v3)
print("O MAIOR IMC DA TURMAEH: ",max(v3))
if (max(v3)<=17):
	print("MUITO ABAIXO DO PESO")
elif (max(v3)>17 and max(v3)<=18.49):
	print("ABAIXO DO PESO")
elif(max(v3)>18.5 and (max(v3)<=24.99):
	print("PESO NORMAL")
elif(max(v3)>25 and max(v3)<=29.99):
	print("ACIMA DO PESO")
elif(max(v3)>30 and max(v3)<=34.99):
	print("OBESIDADE")
elif(max(v3)>35 and max(v3)<=39.99):
	print("OBESIDADE SEVERA")
elif( max(v3)>40.00):
	print("OBESIDADE MORBIDA")



-- EXECUTION TIME:
0.85881
-- ERROR:
  File "/home/codebench/codes/1800/2573/main.py", line 17
    elif(max(v3)>18.5 and (max(v3)<=24.99):
                                          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:32:14) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
v3 = zeros(size(v),dtype=float)
imc=0

for i in range(size(v)):
	imc = v[i]/v2[i]**2
	v3[i]=imc
	imc=0
print(v3)
print("O MAIOR IMC DA TURMAEH: ",max(v3))
if (max(v3)<=17):
	print("MUITO ABAIXO DO PESO")
elif (max(v3)>17 and max(v3)<=18.49):
	print("ABAIXO DO PESO")
elif(max(v3)>18.5 and (max(v3)<=24.99):
	print("PESO NORMAL")
elif(max(v3)>25 and max(v3)<=29.99):
	print("ACIMA DO PESO")
elif(max(v3)>30 and max(v3)<=34.99):
	print("OBESIDADE")
elif(max(v3)>35 and max(v3)<=39.99):
	print("OBESIDADE SEVERA")
elif( max(v3)>40):
	print("OBESIDADE MORBIDA")



-- ERROR:
File "XXXX", line 17
    elif(max(v3)>18.5 and (max(v3)<=24.99):
                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:32:36) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
v3 = zeros(size(v),dtype=float)
imc=0

for i in range(size(v)):
	imc = v[i]/v2[i]**2
	v3[i]=imc
	imc=0
print(v3)
print("O MAIOR IMC DA TURMAEH: ",max(v3))
if (max(v3)<=17):
	print("MUITO ABAIXO DO PESO")
elif (max(v3)>17 and max(v3)<=18.49):
	print("ABAIXO DO PESO")
elif(max(v3)>18.5 and max(v3)<=24.99):
	print("PESO NORMAL")
elif(max(v3)>25 and max(v3)<=29.99):
	print("ACIMA DO PESO")
elif(max(v3)>30 and max(v3)<=34.99):
	print("OBESIDADE")
elif(max(v3)>35 and max(v3)<=39.99):
	print("OBESIDADE SEVERA")
elif( max(v3)>40):
	print("OBESIDADE MORBIDA")



-- EXECUTION TIME:
0.833673
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.60752934 22.99444707 19.13007284 20.15894905]
O MAIOR IMC DA TURMAEH:  24.607529340039623
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84348536 12.95269353 17.4432758 ]
O MAIOR IMC DA TURMAEH:  17.443275802877565
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79247016 31.87781289]
O MAIOR IMC DA TURMAEH:  37.792470156106525
OBESIDADE SEVERA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:32:36) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
v3 = zeros(size(v),dtype=float)
imc=0

for i in range(size(v)):
	imc = v[i]/v2[i]**2
	v3[i]=imc
	imc=0
print(v3)
print("O MAIOR IMC DA TURMAEH: ",max(v3))
if (max(v3)<=17):
	print("MUITO ABAIXO DO PESO")
elif (max(v3)>17 and max(v3)<=18.49):
	print("ABAIXO DO PESO")
elif(max(v3)>18.5 and max(v3)<=24.99):
	print("PESO NORMAL")
elif(max(v3)>25 and max(v3)<=29.99):
	print("ACIMA DO PESO")
elif(max(v3)>30 and max(v3)<=34.99):
	print("OBESIDADE")
elif(max(v3)>35 and max(v3)<=39.99):
	print("OBESIDADE SEVERA")
elif( max(v3)>40):
	print("OBESIDADE MORBIDA")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:33:41) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
v3 = zeros(size(v),dtype=float)
imc=0

for i in range(size(v)):
	imc = round(v[i]/v2[i]**2,2)
	v3[i]=imc
	imc=0
print(v3)
print("O MAIOR IMC DA TURMAEH: ",max(v3))
if (max(v3)<=17):
	print("MUITO ABAIXO DO PESO")
elif (max(v3)>17 and max(v3)<=18.49):
	print("ABAIXO DO PESO")
elif(max(v3)>18.5 and max(v3)<=24.99):
	print("PESO NORMAL")
elif(max(v3)>25 and max(v3)<=29.99):
	print("ACIMA DO PESO")
elif(max(v3)>30 and max(v3)<=34.99):
	print("OBESIDADE")
elif(max(v3)>35 and max(v3)<=39.99):
	print("OBESIDADE SEVERA")
elif( max(v3)>40):
	print("OBESIDADE MORBIDA")



-- EXECUTION TIME:
1.08213
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMAEH:  24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMAEH:  17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
Digite: Digite: [37.79 31.88]
O MAIOR IMC DA TURMAEH:  37.79
OBESIDADE SEVERA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 13:33:41) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
v3 = zeros(size(v),dtype=float)
imc=0

for i in range(size(v)):
	imc = round(v[i]/v2[i]**2,2)
	v3[i]=imc
	imc=0
print(v3)
print("O MAIOR IMC DA TURMAEH: ",max(v3))
if (max(v3)<=17):
	print("MUITO ABAIXO DO PESO")
elif (max(v3)>17 and max(v3)<=18.49):
	print("ABAIXO DO PESO")
elif(max(v3)>18.5 and max(v3)<=24.99):
	print("PESO NORMAL")
elif(max(v3)>25 and max(v3)<=29.99):
	print("ACIMA DO PESO")
elif(max(v3)>30 and max(v3)<=34.99):
	print("OBESIDADE")
elif(max(v3)>35 and max(v3)<=39.99):
	print("OBESIDADE SEVERA")
elif( max(v3)>40):
	print("OBESIDADE MORBIDA")



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:34:05) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
v3 = zeros(size(v),dtype=float)
imc=0

for i in range(size(v)):
	imc = round(v[i]/v2[i]**2,2)
	v3[i]=imc
	imc=0
print(v3)
print("O MAIOR IMC DA TURMAEH: ",max(v3))
if (max(v3)<=17):
	print("MUITO ABAIXO DO PESO")
elif (max(v3)>17 and max(v3)<=18.49):
	print("ABAIXO DO PESO")
elif(max(v3)>18.5 and max(v3)<=24.99):
	print("PESO NORMAL")
elif(max(v3)>25 and max(v3)<=29.99):
	print("ACIMA DO PESO")
elif(max(v3)>30 and max(v3)<=34.99):
	print("OBESIDADE")
elif(max(v3)>35 and max(v3)<=39.99):
	print("OBESIDADE SEVERA")
elif( max(v3)>40):
	print("OBESIDADE MORBIDA")



-- EXECUTION TIME:
0.956027
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMAEH:  24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMAEH:  17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMAEH:  37.79
OBESIDADE SEVERA
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 13:34:34) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
v2 = array(eval(input("Digite: ")))
v3 = zeros(size(v),dtype=float)
imc=0

for i in range(size(v)):
	imc = round(v[i]/v2[i]**2,2)
	v3[i]=imc
	imc=0
print(v3)
print("O MAIOR IMC DA TURMA EH: ",max(v3))
if (max(v3)<=17):
	print("MUITO ABAIXO DO PESO")
elif (max(v3)>17 and max(v3)<=18.49):
	print("ABAIXO DO PESO")
elif(max(v3)>18.5 and max(v3)<=24.99):
	print("PESO NORMAL")
elif(max(v3)>25 and max(v3)<=29.99):
	print("ACIMA DO PESO")
elif(max(v3)>30 and max(v3)<=34.99):
	print("OBESIDADE")
elif(max(v3)>35 and max(v3)<=39.99):
	print("OBESIDADE SEVERA")
elif( max(v3)>40):
	print("OBESIDADE MORBIDA")



-- EXECUTION TIME:
0.928373
-- TEST CASE 1:
---- input:
[64.58,77.85,45.96,55.55]
[1.62,1.84,1.55,1.66]
---- correct output:
[24.61  22.99  19.13  20.16]
O MAIOR IMC DA TURMA EH: 24.61
PESO NORMAL
---- user output:
[24.61 22.99 19.13 20.16]
O MAIOR IMC DA TURMA EH:  24.61
PESO NORMAL
-- TEST CASE 2:
---- input:
[34.67,45.78,55.89]
[1.98,1.88,1.79]
---- correct output:
[  8.84  12.95  17.44]
O MAIOR IMC DA TURMA EH: 17.44
ABAIXO DO PESO
---- user output:
[ 8.84 12.95 17.44]
O MAIOR IMC DA TURMA EH:  17.44
ABAIXO DO PESO
-- TEST CASE 3:
---- input:
[102.89,99.87]
[1.65,1.77]
---- correct output:
[37.79  31.88]
O MAIOR IMC DA TURMA EH: 37.79
OBESIDADE SEVERA
---- user output:
[37.79 31.88]
O MAIOR IMC DA TURMA EH:  37.79
OBESIDADE SEVERA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
